--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,10 +12,13 @@
     "react-bootstrap": "^2.7.2",
     "react-bootstrap-buttons": "^1.0.0",
     "react-calendar": "^4.0.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.1.1",
+    "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
